Issue #3095125 by Mohammed J. Razem: Add hidden overflow CSS to the media loading

--- a/scss/varbase_media.common.scss
+++ b/scss/varbase_media.common.scss
@@ -123,7 +123,9 @@ figure.align-left {
     .media--loading {
       max-width: 100%;
       height: auto;
-      
+      backface-visibility: inherit;
+      overflow: hidden;
+
       &::before {
         display: none;
       }
@@ -136,7 +138,7 @@ figure.align-left {
     }
 
     .b-lazy {
-      filter: blur(3px);
+      filter: blur(1px);
       transform: scale(1.001);
       transition: filter .2s, transform .2s;
       opacity: 1;
@@ -155,6 +157,9 @@ figure.align-left {
 }
 
 .media--loading {
+  backface-visibility: inherit;
+  overflow: hidden;
+
   &::before {
     display: none;
   }
